--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div class="map">
     </div>
     <!-- maps at the abackground ends -->
+    <!-- status displayed -->
+
+    <!-- status displayed ended -->
     <!-- loading screen started  -->
     <div class="loading-screen">
         <img src="img/logo.svg" alt="">
@@ -28,11 +31,13 @@
                 <div class="cleaner" onclick="account='cleaner'">
                     CLeaners
                 </div>
+                <div class="signup" onclick="account='signup'">
+                	Sign Up
+            	</div>
             </div>
             <input type="text" class="login-field" placeholder="Username">
             <input type="text" class="login-field" placeholder="Password">
-            <div class="signup">Signup</div>
-
+    		<div class="status">	</div>
             <input type="submit" onclick="validate()">
         </div>
     </div>
@@ -45,7 +50,7 @@
             <a href="#">Logout</a>
 
         </div>
-        <div class="icon-sidebar"><i class="fa fa-bars" onclick="openNav()" width="50px"></i></div>
+        <div class="icon-sidebar"><i class="fa fa-bars" onclick="openNav();" width="50px" style="font-size: 2em;"></i></div>
     
     <!-- sidebar ended -->
     <!-- dialog box -->
@@ -73,12 +78,16 @@
 				document.getElementById('results').innerHTML = 
 					'<h2>Here is your image:</h2>' + 
 					'<img src="'+data_uri+'"/>';
+					status_displayed();
 			} );
 		}
 	</script>
 </div>
 
     <!-- dialog box ends -->
+    <!-- sign up only for citizens starts -->
+   
+    <!-- sign up for only citizens ends -->
     <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
     <script>
